cmake_minimum_required(VERSION 3.28)
project(org_rest LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CXX_STANDARD 23)

set(REPO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../..")
set(DEPS_INSTALL "${REPO_ROOT}/build/deps_install")

option(ORG_BUILD_WITH_PERFETTO "Enable perfetto profiling" OFF)
option(ORG_DEPS_INSTALL_ROOT "Root path for custom dependency installation root" "")
list(INSERT CMAKE_PREFIX_PATH 0 "${REPO_ROOT}/build/install")
include("${ORG_DEPS_INSTALL_ROOT}/paths.cmake")

find_package(Immer CONFIG REQUIRED)
find_package(Lager CONFIG REQUIRED)
find_package(absl CONFIG REQUIRED)
find_package(protobuf CONFIG REQUIRED)
find_package(boost_mp11 CONFIG REQUIRED)
find_package(BoostDescribe CONFIG REQUIRED)
find_package(BoostPreprocessor CONFIG REQUIRED)
find_package(range-v3 CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(OpenGL REQUIRED)
find_package(Perfetto CONFIG REQUIRED)
find_package(lexy CONFIG REQUIRED)
find_package(yaml-cpp CONFIG REQUIRED)
find_package(Haxorg CONFIG REQUIRED)
find_package(Adaptagrams CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)
find_package(Boost REQUIRED COMPONENTS log)
find_package(cpptrace CONFIG REQUIRED)

add_executable(org_server main.cpp)
target_link_libraries(org_server PUBLIC haxorg::haxorg haxorg::hstd Boost::log TracyClient)
target_include_directories(org_server PUBLIC "/usr/include/Tracy")
