[project]
name = "py_haxorg"
version = "0.1.0"
description = ""
authors = [{ name = "haxscramper", email = "haxscramper@gmail.com" }]
readme = { file = "README.org", content-type = "text/plain" }
requires-python = ">=3.10,<3.14"
dependencies = ["beartype>=0.22.0"]

[build-system]
requires = ["setuptools>=45", "scikit-build-core>=0.5", "pybind11", "conan"]
build-backend = "_build_backend"
backend-path = ["."]

# Setuptools configuration (used when SKIP_CXX_BUILD=1)
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# scikit-build-core configuration (used for full builds)
[tool.scikit-build]
cmake.source-dir = "../.."

[tool.scikit-build.cmake.define]
ORG_USE_CONAN_INSTALL = "ON"
ORG_IS_CONAN_BUILD = "ON"
CMAKE_BUILD_TYPE = "Release"
ORG_DEPS_USE_ADAPTAGRAMS = "OFF"
CMAKE_CXX_COMPILER = "clang"
ORG_DEPS_USE_PROTOBUF = "OFF"
ORG_DEPS_USE_MSGPACK = "OFF"
ORG_BUILD_IS_DEVELOP = "OFF"
ORG_FORCE_ADAPTAGRAMS_BUILD = "OFF"
ORG_USE_PYTHON_BINDINGS = "ON"
ORG_BUILD_USE_NAPI_WRAPPER = "OFF"
ORG_BUILD_TESTS = "OFF"
