[project]
name = "py-repository"
version = "0.1.0"
description = ""
authors = [{name = "haxscramper", email = "haxscramper@gmail.com"}]
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.10,<3.14"
dependencies = [
  "py-scriptutils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
py-scriptutils = { workspace = true }
