[project]
name = "py_repository"
version = "0.1.0"
description = ""
authors = [{name = "haxscramper", email = "haxscramper@gmail.com"}]
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.10,<3.14"
dependencies = [
  "py_scriptutils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
py_scriptutils = { workspace = true }
