[project]
name = "py_scriptutils"
version = "0.1.0"
description = ""
authors = [{name = "haxscramper", email = "haxscramper@gmail.com"}]
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.13,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_scriptutils"]
